# packages/api-client/openapi.json
@@ -2634,74 +2634,7 @@
                             "type": "number"
                           },
                           "data": {
-                            "oneOf": [
-                              {
-                                "type": "object",
-                                "properties": {
-                                  "type": {
-                                    "type": "string",
-                                    "enum": ["common.invalid_request"]
-                                  },
-                                  "status": {
-                                    "type": "number",
-                                    "enum": [400]
-                                  },
-                                  "message": {
-                                    "type": "string"
-                                  },
-                                  "data": {
-                                    "type": "object",
-                                    "properties": {
-                                      "issues": {
-                                        "type": "array",
-                                        "items": {}
-                                      }
-                                    },
-                                    "required": ["issues"]
-                                  }
-                                },
-                                "required": [
-                                  "type",
-                                  "status",
-                                  "message",
-                                  "data"
-                                ]
-                              },
-                              {
-                                "type": "object",
-                                "properties": {
-                                  "type": {
-                                    "type": "string",
-                                    "enum": ["stock.unsupported"]
-                                  },
-                                  "status": {
-                                    "type": "number",
-                                    "enum": [404]
-                                  },
-                                  "message": {
-                                    "type": "string"
-                                  },
-                                  "data": {
-                                    "type": "object",
-                                    "properties": {
-                                      "symbol": {
-                                        "type": "string"
-                                      }
-                                    },
-                                    "required": ["symbol"]
-                                  }
-                                },
-                                "required": [
-                                  "type",
-                                  "status",
-                                  "message",
-                                  "data"
-                                ]
-                              },
-                              {
-                                "$ref": "#/components/schemas/UnavailableEventDto"
-                              }
-                            ]
+                            "$ref": "#/components/schemas/UnavailableEventDto"
                           }
                         },
                         "required": ["event", "data"]
@@ -2713,7 +2646,91 @@
             }
           },
           "400": {
-            "description": "Invalid symbols query"
+            "description": "Invalid symbols query",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean",
+                      "enum": [false]
+                    },
+                    "error": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "enum": ["common.invalid_request"]
+                        },
+                        "status": {
+                          "type": "number",
+                          "enum": [400]
+                        },
+                        "message": {
+                          "type": "string"
+                        },
+                        "data": {
+                          "type": "object",
+                          "properties": {
+                            "issues": {
+                              "type": "array",
+                              "items": {}
+                            }
+                          },
+                          "required": ["issues"]
+                        }
+                      },
+                      "required": ["type", "status", "message", "data"]
+                    }
+                  },
+                  "required": ["success", "error"]
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Unsupported stock symbol",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean",
+                      "enum": [false]
+                    },
+                    "error": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "enum": ["stock.unsupported"]
+                        },
+                        "status": {
+                          "type": "number",
+                          "enum": [404]
+                        },
+                        "message": {
+                          "type": "string"
+                        },
+                        "data": {
+                          "type": "object",
+                          "properties": {
+                            "symbol": {
+                              "type": "string"
+                            }
+                          },
+                          "required": ["symbol"]
+                        }
+                      },
+                      "required": ["type", "status", "message", "data"]
+                    }
+                  },
+                  "required": ["success", "error"]
+                }
+              }
+            }
           }
         },
         "summary": "",
